# codegov-wtn-vote-relay

./: Cargo.toml  README.md  canister_ids.json  dfx.json
.github/workflows/: backend.yaml  build_caches.yaml
canister/: Cargo.toml  can.did
canister/src/: lib.rs  logs.rs  neuron_pair.rs  state.rs
canister/src/jobs/: check_for_new_nns_votes.rs  mod.rs  process_votes.rs
canister/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
canister/src/queries/: list_neuron_pairs.rs  logs.rs  mod.rs  votes_to_process.rs
canister/src/updates/: deregister_neuron_pair.rs  mod.rs  register_neuron_pair.rs  status.rs
scripts/: reinstall.sh  upgrade.sh
