[workspace]
members = [
    "canister"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.10.10"
futures = "0.3.31"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic_principal = "0.1.1"
ic-stable-structures = "0.6.6"
rmp-serde = "1.3.0"
serde = "1.0.215"
