[package]
name = "codegov_wtn_vote_relay"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic_principal.workspace = true
ic-stable-structures.workspace = true
rmp-serde.workspace = true
serde.workspace = true
